# hexga

./: .gitignore  .icarukTime.json  .rustfmt.toml  Cargo.toml  HELP.md  IDEA.md  LICENSE-MIT  README.md  TODO.md  WEB.md  binding.ron  index.html  llm_ai_disclamer.md  myfile.txt  person.json  person.ron  rust-toolchain.toml  rustc-ice-2025-07-20T13_00_21-30272.txt  share_crate.cmd
hexga/hexga/: Cargo.toml  README.md
hexga/hexga/src/: lib.rs  prelude.rs  serde_test.rs  test.rs
hexga/hexga_ansi_color/: Cargo.toml  README.md
hexga/hexga_ansi_color/src/: lib.rs
hexga/hexga_arena/: Cargo.toml  README.md
hexga/hexga_arena/examples/: arena.rs
hexga/hexga_arena/src/: arena.rs  arena_buffer.rs  lib.rs
hexga/hexga_array/: Cargo.toml  README.md
hexga/hexga_array/src/: array.rs  extension.rs  lib.rs  macro_impl.rs
hexga/hexga_array_vec/: Cargo.toml  README.md
hexga/hexga_array_vec/src/: lib.rs
hexga/hexga_asset/: Cargo.toml  README.md  approch.md
hexga/hexga_asset/examples/: string_assets.rs  string_assets2.rs  string_load.rs  string_update_or_create.rs
hexga/hexga_asset/src/: asset.rs  asset_manager.rs  asset_save.rs  assets.rs  bytes.rs  hot_reload.rs  lib.rs  lib.txt  lib2.txt  load.rs  serde_impl.rs  untyped_assets.rs
hexga/hexga_base/: Cargo.toml  README.md
hexga/hexga_base/src/: README.md  capacity.rs  clearable.rs  get_index.rs  length.rs  lib.rs  lookup.rs  sequence.rs  utils.rs
hexga/hexga_bit/: Cargo.toml  README.md
hexga/hexga_bit/examples/: bit_zero.rs
hexga/hexga_bit/src/: bit_all_used.rs  bit_any_pattern.rs  bit_pattern.rs  bit_zero.rs  bit_zero_in_option.rs  from_bits.rs  lib.rs  pod.rs  result.rs
hexga/hexga_bit_derive/: Cargo.toml  README.md
hexga/hexga_bit_derive/src/: lib.rs  traits.rs
hexga/hexga_bitflags/: Cargo.toml  README.md
hexga/hexga_bitflags/src/: bit_flags.rs  lib.rs  prelude.rs
hexga/hexga_bitflags/tests/: test.rs
hexga/hexga_core/: Cargo.toml  README.md
hexga/hexga_core/src/: accessor.rs  asynchrone.rs  borrow.rs  builder.rs  cell.rs  cfg.rs  convert.rs  default.rs  format.rs  guard.rs  handle.rs  has.rs  iter.rs  lib.rs  macros.rs  mem.rs  option.rs  prelude.rs  primitives.rs  ptr.rs  rc.rs  result.rs  run.rs  singleton.rs  sync.rs  utils.rs  wrapper.rs
hexga/hexga_core/src/alloc/: alloc.rs  block.rs  layout.rs  mod.rs
hexga/hexga_core/src/allocation/: alloc.rs  block.rs  layout.rs
hexga/hexga_core/src/boxed/: drop_only_box.rs  mod.rs  std_box.rs
hexga/hexga_core/src/cell/: mod.rs  single_thread_cell.rs
hexga/hexga_core/src/collections/: capacity.rs  clearable.rs  collect_to.rs  collection.rs  get.rs  index.rs  insert.rs  insert_pop.rs  length.rs  mod.rs  pop.rs  prelude.rs  push.rs  remove.rs  sequence.rs  singly_linked.rs  view.rs  view_mut.rs
hexga/hexga_core/src/iter/: collect_to.rs  mod.rs  try_from_iter.rs
hexga/hexga_core/src/marker/: collection.rs  mod.rs
hexga/hexga_core/src/ops/: alloc.rs  capacity.rs  index.rs  insert_pop.rs  mod.rs  push.rs
hexga/hexga_core_mem/: Cargo.toml
hexga/hexga_core_mem/src/: lib.rs  zeroable.rs  zeroable_in_option.rs
hexga/hexga_encoding/: Cargo.toml  README.md
hexga/hexga_encoding/src/: base64.rs  default_impl.rs  fs_extension.rs  lib.rs  load.rs  result.rs  save.rs
hexga/hexga_encoding/src/serde_impl/: de.rs  mod.rs  ser.rs
hexga/hexga_encoding/src/url_data/: mod.rs  serde_impl.rs
hexga/hexga_encoding_derive/: Cargo.toml  README.md
hexga/hexga_encoding_derive/src/: lib.rs
hexga/hexga_engine/: Cargo.toml  README.md
hexga/hexga_engine/src/: README.md  app.rs  clipboard.rs  conf.rs  context.rs  debug.rs  event.rs  extern_alias.rs  free_function.rs  gpu.rs  gpu_type.rs  internal.rs  lib.rs  log.rs  pen.rs  render_backend.rs  vertex.rs  wgpu_context.rs
hexga/hexga_engine_core/: Cargo.toml  README.md
hexga/hexga_engine_core/src/: conf.rs  context.rs  gpu.rs  lib.rs  render.rs
hexga/hexga_engine_graphics/: Cargo.toml
hexga/hexga_engine_graphics/src/: buffer.rs  common_wrapper.rs  context.rs  executor.rs  gpu.rs  gpu_vec.rs  lib.rs  result.rs  surface.rs
hexga/hexga_engine_old/: Cargo.toml  todo.md
hexga/hexga_file_system/: Cargo.toml  README.md
hexga/hexga_file_system/src/: lib.rs
hexga/hexga_generational/: Cargo.toml  README.md
hexga/hexga_generational/examples/: 0_game.rs  1_self_referencing.rs  2_view.rs  3_array_vec.rs  4_fully_qualified.rs  4_gen_map.rs  5_gen_set.rs  game.rs  self_referencing.rs  view.rs
hexga/hexga_generational/src/: gen_hash_map.rs  gen_id.rs  gen_map.rs  gen_multi_map.rs  gen_seq.rs  gen_set.rs  gen_vec.rs  lib.rs  multi_map.rs  prelude.rs  table.rs
hexga/hexga_graphics/: Cargo.toml  README.md
hexga/hexga_graphics/src/: buffer.rs  context.rs  extension.rs  format.rs  gfx.rs  gpu.rs  immediate_render.rs  instance.rs  lib.rs  main.rs  render.rs  result.rs  surface.rs  typedef.rs  vertex.rs
hexga/hexga_io/: Cargo.toml  EXTENSION.md  README.md
hexga/hexga_io/src/: core.rs  default_impl.rs  error.rs  extensions.rs  fs_path.rs  io.rs  lib.rs  load.rs  markup.rs  markup_extension.rs  mediator.rs  path_extension.rs  prelude.rs  result.rs  save.rs
hexga/hexga_io_derive/: Cargo.toml  README.md
hexga/hexga_io_derive/src/: lib.rs
hexga/hexga_map_on/: Cargo.toml  README.md
hexga/hexga_map_on/examples/: cast_to.rs  impl_trait.rs  print.rs  trait_0.rs  trait_1.rs  trait_cast.rs  trait_minus1.rs  trait_operator.rs  tuple.rs  tuple_with_macro.rs  z_limitation.rs
hexga/hexga_map_on/src/: lib.rs  map_on.rs  map_on_common.rs  map_on_tuple.rs
hexga/hexga_math/: Cargo.toml  README.md
hexga/hexga_math/src/: angle.rs  array.rs  derive.rs  extension.rs  lib.rs  map_on.rs  prelude.rs  unit.rs
hexga/hexga_math_derive/: Cargo.toml  README.md
hexga/hexga_math_derive/src/: lib.rs
hexga/hexga_mem_derive/: Cargo.toml
hexga/hexga_mem_derive/src/: lib.rs
hexga/hexga_number/: Cargo.toml  README.md
hexga/hexga_number/src/: constant.rs  increase.rs  increment.rs  lib.rs  map_on.rs  number.rs  ops.rs  prelude.rs  reflection.rs  traits.rs
hexga_test/: Cargo.toml
hexga_test/src/: main.rs
(+1283 files in other folders)
