[workspace]
resolver = "3"
members = ["hexga/*", "share_crate", "tmp/*"]


[workspace.package]
version = "0.0.11-beta.4"
authors = ["Mewily <thomas.mewily@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Thomas-Mewily/hexga"
repository = "https://github.com/Thomas-Mewily/hexga"
edition = "2024"

[workspace.dependencies]
hexga_ansi_color       = { path = "./hexga/hexga_ansi_color",          version = "0.0.11-beta.4", default-features = false }
hexga_map_on           = { path = "./hexga/hexga_map_on",              version = "0.0.11-beta.4", default-features = false }
hexga_typedef          = { path = "./hexga/hexga_typedef",             version = "0.0.11-beta.4", default-features = true  }
hexga_number           = { path = "./hexga/hexga_number",              version = "0.0.11-beta.4", default-features = false }
hexga_array            = { path = "./hexga/hexga_array",               version = "0.0.11-beta.4", default-features = false }
hexga_singleton        = { path = "./hexga/hexga_singleton",           version = "0.0.11-beta.4", default-features = false }
hexga_encoding         = { path = "./hexga/hexga_encoding",            version = "0.0.11-beta.4", default-features = true  }
hexga_encoding_derive  = { path = "./hexga/hexga_encoding_derive",     version = "0.0.11-beta.4", default-features = true  }
hexga_io               = { path = "./hexga/hexga_io",                  version = "0.0.11-beta.4", default-features = false }
hexga_asset            = { path = "./hexga/hexga_asset",               version = "0.0.11-beta.4", default-features = false }
hexga_bitflags         = { path = "./hexga/hexga_bitflags",            version = "0.0.11-beta.4", default-features = false }
hexga_core             = { path = "./hexga/hexga_core",                version = "0.0.11-beta.4", default-features = true  }
hexga_generational     = { path = "./hexga/hexga_generational",        version = "0.0.11-beta.4", default-features = false }
hexga_math             = { path = "./hexga/hexga_math",                version = "0.0.11-beta.4", default-features = false }
hexga_utils            = { path = "./hexga/hexga_utils",               version = "0.0.11-beta.4", default-features = false }
hexga_graphics         = { path = "./hexga/hexga_graphics",            version = "0.0.11-beta.4", default-features = false }
hexga                  = { path = "./hexga/hexga",                     version = "0.0.11-beta.4", default-features = true  }
hexga_engine           = { path = "./hexga/hexga_engine",              version = "0.0.11-beta.4", default-features = true  }
