[package]
name = "hexga"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = []
description = "include all other console hexga crate in one !"
categories = ["rust-patterns"]

[features]
default = ["serde", "int_are_32_bits", "float_are_32_bits"]

int_are_8_bits    = ["hexga_math/int_are_8_bits"]
int_are_16_bits   = ["hexga_math/int_are_16_bits"]
int_are_32_bits   = ["hexga_math/int_are_32_bits"]
int_are_64_bits   = ["hexga_math/int_are_64_bits"]
int_are_size_bits = ["hexga_math/int_are_size_bits"]

float_are_32_bits   = ["hexga_math/float_are_32_bits"]
float_are_64_bits   = ["hexga_math/float_are_64_bits"]
float_are_size_bits = ["hexga_math/float_are_size_bits"]

serde = ["dep:serde", "hexga_generational/serde", "hexga_math/serde"]

[dependencies]
hexga_base.workspace = true
hexga_math.workspace = true
hexga_generational.workspace = true

# serialization
serde = { version = "1.0", features = ["derive"], optional = true}