[package]
name = "hexga"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = []
description = "include all other console hexga crate in one !"
categories = ["rust-patterns"]

[features]
default = [
            "int_are_32_bits", "float_are_32_bits",
            "serde", "serde_rc", "hexga_encoding_derive", "hexga_asset"
          ]

int_are_8_bits    = ["hexga_math/int_are_8_bits", "hexga_image/int_are_8_bits"]
int_are_16_bits   = ["hexga_math/int_are_16_bits", "hexga_image/int_are_16_bits"]
int_are_32_bits   = ["hexga_math/int_are_32_bits", "hexga_image/int_are_32_bits"]
int_are_64_bits   = ["hexga_math/int_are_64_bits", "hexga_image/int_are_64_bits"]
int_are_size_bits = ["hexga_math/int_are_size_bits", "hexga_image/int_are_size_bits"]

float_are_32_bits   = ["hexga_math/float_are_32_bits", "hexga_image/float_are_32_bits"]
float_are_64_bits   = ["hexga_math/float_are_64_bits", "hexga_image/float_are_64_bits"]
float_are_size_bits = ["hexga_math/float_are_size_bits", "hexga_image/float_are_size_bits"]

hexga_encoding_derive = ["hexga_encoding/derive"]


serde = ["dep:serde",
  "hexga_generational/serde",
  "hexga_math/serde",
  "hexga_bitflags/serde",
  "hexga_ansi_color/serde",
  "hexga_image/serde",
  "hexga_io/serde",
  "hexga_encoding/serde",
  "hexga_asset/serde",
  "hexga_utils/serde",
]

serde_rc = ["serde/rc", "hexga_encoding/rc", "hexga_io/serde_rc", "hexga_asset/serde_rc", "hexga_utils/serde_rc"]

hexga_asset = ["dep:hexga_asset"]


[dependencies]
hexga_core.workspace = true
hexga_math.workspace = true
hexga_generational.workspace = true
hexga_singleton.workspace = true
hexga_bitflags.workspace = true
hexga_ansi_color.workspace = true
hexga_utils.workspace = true
hexga_map_on.workspace = true
hexga_image.workspace = true
hexga_encoding.workspace = true
hexga_io.workspace = true
hexga_asset = { workspace = true, optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }



#hexga_undo_redo.workspace = true

# serialization
