[package]
name = "hexga_array"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

keywords = ["array"]
description = "A crate that impl trait / new functions for array."
categories = ["rust-patterns"]

[dependencies]
