[package]
name = "hexga_array_vec"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

description = "A vector with fixed capacity, backed by an array based on arrayvec"
keywords = ["stack", "vector", "array", "data-structure"]
categories = ["data-structures", "no-std"]

[features]

default = ["serde", "std"]
serde   = ["dep:serde"]
serde_rc = ["serde/rc"]

std = []

[dependencies]
hexga_core.workspace = true

serde = { version = "1.0.0", features = ["derive"], optional = true }
