[package]
name = "hexga_asset"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

description = "A crate for loading/caching asset across multiple threads."
keywords = ["encoding", "asset", "content", "hot-reload"]
categories = ["encoding", "filesystem", "data-structures"]

[features]
default = ["serde", "serde_rc"]

serde = ["dep:serde",
    "hexga_core/serde",
    "hexga_encoding/serde",
    "hexga_generational/serde",
    "hexga_io/serde",
]

serde_rc = ["serde/rc", "hexga_encoding/rc", "hexga_io/serde_rc"]


[dependencies]
hexga_core.workspace = true
hexga_encoding.workspace = true
hexga_generational.workspace = true
hexga_io.workspace = true

serde = { version = "1.0.0", optional = true }