[package]
name = "hexga_base"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["serde"]

[dependencies]
have_len = "0.1.0"
default_is_triple_underscore = "0.2.0"

# serialization
serde = { version = "1.0", features = ["derive"], optional = true}