[package]
name = "hexga_base"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[features]
default = ["serde"]

[dependencies]
have_len = "0.1.0"
default_is_triple_underscore = "0.2.0"

rayon = "1.10.0"

# serialization
serde = { version = "1.0", features = ["derive"], optional = true}