[package]
name = "hexga_bit"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[features]
default = ["derive"]

derive = ["hexga_bit_derive", "extern_crate_std"]
extern_crate_alloc = []
extern_crate_std = ["extern_crate_alloc"]  # std requires alloc

[dependencies]
hexga_bit_derive = { workspace = true, optional = true }
hexga_map_on.workspace = true