[package]
name = "hexga_bitflags"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = ["bitflags"]
description = "Bitflags utilities"
categories = ["rust-patterns"]

[dependencies]
hexga_number.workspace = true
