[package]
name = "hexga_core"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = []
description = "Basic set of functionalities common to all hexga crate"
categories = ["rust-patterns"]

[features]
default = ["serde", "hexga_io", "hexga_io_rc"]

serde = ["dep:serde"]
hexga_io = ["serde", "dep:hexga_io", "hexga_io/derive"]
hexga_io_rc = ["hexga_io", "hexga_io/rc", "serde", "serde/rc"]

[dependencies]
hexga_map_on.workspace = true

serde = { version = "1.0.0", features = ["derive"], optional = true }
hexga_io = { workspace = true, optional = true }
