[package]
name = "hexga_encoding"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

description = "Encoding and I/O abstraction for loading, saving, and converting data with custom extensions and media types, with optional Serde integration."
keywords = ["encoding", "io", "serde", "data-url", "mime", "load", "save"]
categories = ["encoding", "filesystem", "data-structures"]

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.0", optional = true }
base64 = "0.22.1"
