[package]
name = "hexga_encoding"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

description = "Encoding and I/O abstraction for loading, saving, and converting data with custom extensions and media types, with optional Serde integration."
keywords = ["encoding", "io", "serde", "data-url", "mime", "load", "save"]
categories = ["encoding", "filesystem", "data-structures"]

[features]
default = ["serde", "rc"]

serde = ["dep:serde",
    "dep:ron",
    "dep:serde_json",
    "dep:serde-xml-rs",
    "dep:bincode",
    "hexga_core/serde"
]

rc = ["serde/rc"]

[dependencies]
hexga_core.workspace = true
serde = { version = "1.0.0", optional = true }
base64 = "0.22.1"

ron = { version = "0.11.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
serde-xml-rs = { version = "0.8.1", optional = true }
bincode = { version = "1.3.3", optional = true }
