[package]
name = "hexga_engine"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = [
            "int_are_32_bits", "float_are_32_bits",
            "serde", "hexga_io",
            "serde_json", "serde_xml", "serde_quick_bin"
          ]



int_are_8_bits    = ["hexga/int_are_8_bits"]
int_are_16_bits   = ["hexga/int_are_16_bits"]
int_are_32_bits   = ["hexga/int_are_32_bits"]
int_are_64_bits   = ["hexga/int_are_64_bits"]
int_are_size_bits = ["hexga/int_are_size_bits"]

float_are_32_bits   = ["hexga/float_are_32_bits"]
float_are_64_bits   = ["hexga/float_are_64_bits"]
float_are_size_bits = ["hexga/float_are_size_bits"]

hexga_io = ["dep:hexga_io", "hexga/hexga_io", "serde"]

serde = ["dep:serde", "hexga/serde"]

serde_json  = ["hexga/serde_json"]
serde_xml   = ["hexga/serde_xml"]
serde_quick_bin  = ["hexga/serde_quick_bin"]

[dependencies]
hexga.workspace = true
serde = { version = "1.0.0", features = ["derive"], optional = true }
hexga_io = { workspace = true, optional = true }
winit = "0.30.11"
async-std = { version = "1.13.1" }
copypasta = "0.10.2"
log = { version = "0.4.22"}
env_logger = "0.10"
wgpu = { version = "25.0.0" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.49"
wgpu = { version = "25.0.0", features = ["webgl"] }

