[package]
name = "hexga_engine_core"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

keywords = []
description = "Traits are data structure to define the Hexga Engine"
categories = []

[features]
default = ["serde", "int_are_32_bits", "float_are_32_bits"]

int_are_8_bits    = ["hexga/int_are_8_bits", "hexga_graphics/int_are_8_bits"]
int_are_16_bits   = ["hexga/int_are_16_bits", "hexga_graphics/int_are_16_bits"]
int_are_32_bits   = ["hexga/int_are_32_bits", "hexga_graphics/int_are_32_bits"]
int_are_64_bits   = ["hexga/int_are_64_bits", "hexga_graphics/int_are_64_bits"]
int_are_size_bits = ["hexga/int_are_size_bits", "hexga_graphics/int_are_size_bits"]

float_are_32_bits   = ["hexga/float_are_32_bits", "hexga_graphics/float_are_32_bits"]
float_are_64_bits   = ["hexga/float_are_64_bits", "hexga_graphics/float_are_64_bits"]
float_are_size_bits = ["hexga/float_are_size_bits", "hexga_graphics/float_are_size_bits"]

serde = ["dep:serde", "hexga/serde"]

[dependencies]
hexga.workspace = true
hexga_graphics.workspace = true

serde = { version = "1.0.0", features = ["derive"], optional = true }
