[package]
name = "hexga_engine_core"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

keywords = []
description = "A small (work in progress) game framework"
categories = ["game-development", "rendering", "multimedia", "graphics"]

[features]
default = ["serde", "int_are_32_bits", "float_are_32_bits"]

int_are_8_bits    = ["hexga/int_are_8_bits", "hexga_engine_render/int_are_8_bits"]
int_are_16_bits   = ["hexga/int_are_16_bits", "hexga_engine_render/int_are_16_bits"]
int_are_32_bits   = ["hexga/int_are_32_bits", "hexga_engine_render/int_are_32_bits"]
int_are_64_bits   = ["hexga/int_are_64_bits", "hexga_engine_render/int_are_64_bits"]
int_are_size_bits = ["hexga/int_are_size_bits", "hexga_engine_render/int_are_size_bits"]

float_are_32_bits   = ["hexga/float_are_32_bits", "hexga_engine_render/float_are_32_bits"]
float_are_64_bits   = ["hexga/float_are_64_bits", "hexga_engine_render/float_are_64_bits"]
float_are_size_bits = ["hexga/float_are_size_bits", "hexga_engine_render/float_are_size_bits"]

serde = ["dep:serde", "hexga/serde", "hexga_engine_render/serde"]

[dependencies]
hexga.workspace = true
hexga_engine_render.workspace = true

miniquad = "0.4.8"
serde = { version = "1.0.0", features = ["derive"], optional = true }

