[package]
name = "hexga_engine_old"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true


[features]
default = [
            "int_are_32_bits", "float_are_32_bits",
            "serde", "hexga_io", "hexga_io_derive",
            "serde_json", "serde_ron", "serde_xml", "serde_quick_bin"
          ]


int_are_8_bits    = ["hexga/int_are_8_bits"]
int_are_16_bits   = ["hexga/int_are_16_bits"]
int_are_32_bits   = ["hexga/int_are_32_bits"]
int_are_64_bits   = ["hexga/int_are_64_bits"]
int_are_size_bits = ["hexga/int_are_size_bits"]

float_are_32_bits   = ["hexga/float_are_32_bits"]
float_are_64_bits   = ["hexga/float_are_64_bits"]
float_are_size_bits = ["hexga/float_are_size_bits"]

hexga_io_derive = ["hexga/hexga_io_derive", "hexga_io"]
hexga_io = ["dep:hexga_io", "hexga/hexga_io", "serde"]

serde = ["dep:serde", "hexga/serde"]

serde_ron   = ["hexga/serde_ron"]
serde_json  = ["hexga/serde_json"]
serde_xml   = ["hexga/serde_xml"]
serde_quick_bin  = ["hexga/serde_quick_bin"]

[dependencies]
hexga.workspace = true
serde = { version = "1.0.0", features = ["derive"], optional = true }
hexga_io = { workspace = true, optional = true }

wgpu = { version = "25.0.0" }
winit = "0.30.11"
env_logger = "0.10"
bytemuck = "1.23.0"
async-std = { version = "1.13.1" }
log = { version = "0.4.22"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", features = ["webgl"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
