[package]
name = "hexga_file_system"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

keywords = []
description = "io file abstraction based on serde to allow loading/saving/converting bytes with a custom extension"
categories = ["filesystem", "encoding"]

[features]
default = ["serde"]

serde = ["dep:serde", "dep:hexga_serde"]

[dependencies]
hexga_encoding.workspace = true
hexga_serde = { workspace = true, optional = true }
serde = { version = "1.0.0", optional = true }

base64 = "0.22.1"